# data-science-mcp

./: README.md  pyproject.toml  verify_fixes.py
src/: __init__.py  server.py
src/core/: __init__.py  constraint_manager.py  dataset_detector.py  experiment_tracker.py  path_utils.py  version_manager.py
src/eda/: __init__.py  nlp_eda.py  pipeline.py  tabular_eda.py  timeseries_eda.py  vision_eda.py
src/ensemble/: __init__.py  ensemble_runner.py
src/evaluation/: __init__.py  evaluator.py
src/features/: __init__.py  pipeline.py  tabular_features.py
src/models/: __init__.py  hybrid_model.py  model_selector.py  multi_model.py  registry.py
src/submission/: __init__.py  generator.py
src/training/: __init__.py  pipeline.py  trainer.py
