[project]
name = "data-science-mcp"
version = "0.1.0"
description = "AI Data Science Agent MCP Server for end-to-end ML workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Data Science MCP Team"}
]

dependencies = [
    # MCP
    "mcp[cli]>=1.0.0",
    
    # Data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",
    
    # ML - Core
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    
    # Time Series
    "statsmodels>=0.14.0",
    
    # Utilities
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
deep-learning = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "timm>=0.9.0",
    "sentence-transformers>=2.2.0",
]
prophet = [
    "prophet>=1.1.0",
]
automl = [
    "autogluon.tabular>=1.0.0",
]
all = [
    "data-science-mcp[deep-learning,prophet,automl]",
]

[project.scripts]
ds-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
